--- a/src/popup/Popup.scss
+++ b/src/popup/Popup.scss
@@ -1,11 +1,4 @@
-body {
-  height: unset;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-}
+@import '../styles/index.scss';
 
 .basic-table {
   width: 200px;
@@ -16,51 +9,95 @@ body {
   width: 100%;
 }
 
-.row{
-  &-1,&-2,&-3{
-    margin-bottom:10px;
+.row {
+  &-1,
+  &-2,
+  &-3 {
+    margin-bottom: 10px;
   }
-  &-2{
+  &-2 {
     width: 300px;
     display: flex;
     flex-direction: column;
     list-style: none;
-    p{
+    p {
       font-size: 12px;
     }
-    li{
-      margin-bottom:10px;
+    li {
+      margin-bottom: 10px;
       display: flex;
-      span:first-of-type{
+      span:first-of-type {
         display: inline-block;
         margin-right: 10px;
       }
     }
   }
-  &-1{
+  &-1 {
+    width: 298px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     color: #606266;
     font-size: 16px;
-    span:last-of-type{
+    font-size: 14px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    margin-bottom: 8px;
+    i {
+      color: #722ed1;
+      font-style: normal;
+      @include limitLine;
+    }
+    .toolbar {
+      margin-left: auto;
+      flex-shrink: 0;
+    }
+    span:last-of-type {
       display: inline-block;
-      margin-left: 8px;
+      margin-left: 2px;
+    }
+    span {
+      cursor: pointer;
+      &:hover {
+        color: #722ed1;
+      }
     }
   }
-  &-3{
+  &-3 {
     text-align: center;
   }
 }
 
-.toolbar{
+.toolbar {
   display: inline-block;
   float: right;
 }
-.ant-collapse-item-active .ant-collapse-header{
-  background: #f77f00;
-  color: #fff!important;
-  .ant-btn{
-    cursor: not-allowed;
-    opacity: .7;
+.ant-collapse-item-active .ant-collapse-header {
+  .ant-collapse-btn {
+    transform: rotate(90deg);
   }
+}
+.ant-collapse-item.active {
+  .ant-collapse-header {
+    background: rgba(114, 46, 209, 0.5);
+    color: #fff !important;
+  }
+  .ant-btn {
+    cursor: not-allowed;
+    opacity: 0.7;
+    color: #fff !important;
+  }
+}
+.ant-collapse-header {
+  .ant-btn {
+    height: 19px;
+    line-height: 19px;
+  }
+}
+.ant-collapse-arrow {
+  display: none !important;
+}
+
+.panel-header {
+  display: inline-block;
+  width: 250px;
 }
