--- a/src/view/demo/view.scss
+++ b/src/view/demo/view.scss
@@ -1,3 +1,13 @@
+main{
+    padding:30px;
+}
+
+.op-modal{
+    button:first-of-type{
+        margin-right: 10px;
+    }
+}
+
 .row {
     &-1{
         margin-bottom:10px;
@@ -11,11 +21,6 @@
 
 .ant-radio-group{
     margin-bottom:10px;
-}
-
-
-main{
-    padding:30px;
 }
 
 .ant-checkbox-wrapper .ant-checkbox-wrapper {
