--- a/src/popup/Popup.scss
+++ b/src/popup/Popup.scss
@@ -70,6 +70,24 @@
 .toolbar {
   display: inline-block;
   float: right;
+  > div {
+    display: inline-block;
+    width: max-content;
+    &:last-of-type {
+      cursor: pointer;
+      input {
+        position: absolute;
+        width: 16px;
+        height: 16.5px;
+        opacity: 0;
+      }
+      input[type=file], /* FF, IE7+, chrome (except button) */
+      input[type=file]::-webkit-file-upload-button {
+        /* chromes and blink button */
+        cursor: pointer;
+      }
+    }
+  }
 }
 .ant-collapse-item-active .ant-collapse-header {
   .ant-collapse-btn {
