--- a/src/popup/Popup.scss
+++ b/src/popup/Popup.scss
@@ -42,6 +42,7 @@
     padding-bottom: 8px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     margin-bottom: 8px;
+    margin-top:8px;
     i {
       color: #722ed1;
       font-style: normal;
